<resources>
    <string name="app_name">Link</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">My Corner</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="shop">Shop</string>
    <string name="dashboard">Dashboard</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_surname">Your Surname</string>
    <string name="your_phone_number">Your Number</string>
    <string name="your_date_of_birth">Your Date OF Birth</string>
    <string name="your_age">Your Age</string>
    <string name="edit">Edit Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="settings">Settings</string>
    <string name="about">About Link</string>
    <string name="link_message">Hi, I\'m Link!You type, I speak!!</string>
    <string name="my_corner">My Corner</string>

</resources>
